--- a/margin-and-padding/margin-and-padding-2/style.css
+++ b/margin-and-padding/margin-and-padding-2/style.css
@@ -1,27 +1,41 @@
 body {
   background: #eee;
   font-family: sans-serif;
+  
 }
 
 .card {
   width: 400px;
   background: #fff;
   margin: 16px auto;
+  padding: 8px;
 }
 
 .title {
   background: #e3f4ff;
+  padding: 8px;
+  font-size: 16px;
+  margin: 0px;
 }
 
 .content {
   background: #e3f4ff;
+  padding: 8px;
+  margin: 8px 0px;
 }
 
 .button-container {
   background: #e3f4ff;
+  padding: 8px;
+  text-align: center;
+  margin: 0px;
+  
 }
 
 button {
+  display: block;
   background: white;
   border: 1px solid #eee;
+  margin:auto;
+  padding: 8px 16px 8px 16px;
 }
