--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -10,8 +10,51 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  padding: 10px;
 }
 
+.card, .plant {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.card {
+  gap: 32px;
+}
+.allPlants {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  gap: 52px;
+}
+
+.plant {
+  flex-basis: 200px;
+}
+.text {
+  text-align: center;
+}
+
+/* ALTERNATIVE SOLUTION -simplier, better, but aobove is a version that uses only flex:)
+body {
+  text-align: center;
+}
+
+.title {
+  margin-bottom: 32px;
+}
+
+.allPlants {
+  display: flex;
+  justify-content: center;
+  gap: 52px;
+}
+
+.plant {
+  max-width: 200px;
+}
+
+*/
 /* do not edit this footer */
 .footer {
   position: fixed;
