--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -9,7 +9,7 @@ body {
   margin: 0;
   background: #aaa;
   color: #333;
-  /* I'll give you this one for free lol */
+  /* I'll give you this one for free lol  */
   display: flex;
   align-items: center;
   justify-content: center;
@@ -20,8 +20,14 @@ body {
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  display: flex;
+  padding: 20px;
+  column-gap: 20px;
 }
-
+.right-side {
+  display: flex;
+  flex-direction: column;
+}
 .icon {
   color: royalblue;
   font-size: 26px;
@@ -33,8 +39,19 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-shrink: 0;
 }
-
+.header-x {
+  display: flex;
+  justify-content: space-between;
+}
+.text {
+  margin: 10px 0;
+}
+.header {
+  font-weight: bold;
+  font-size: larger;
+}
 .close-button {
   background: #eee;
   border-radius: 50%;
@@ -45,8 +62,9 @@ body {
   width: 24px;
   display: flex;
   align-items: center;
-  justify-content: center;
-}
+  justify-content: center;  
+
+} 
 
 button {
   padding: 8px 16px;
@@ -57,10 +75,12 @@ button.continue {
   background: royalblue;
   border: 1px solid royalblue;
   color: white;
+  display: inline-block;
 }
 
 button.cancel {
   background: white;
   border: 1px solid #ddd;
   color: royalblue;
+  display: inline-block;
 }
