add div structure to index

--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -5,7 +5,10 @@ body {
   display: flex;
   flex-direction: column;
 }
-
+.middle {
+  display: flex;
+  flex-direction: column;
+}
 .header {
   height: 72px;
   background: darkmagenta;
