--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -8,7 +8,14 @@ body {
 .middle {
   display: flex;
   flex-direction: column;
+  flex-wrap: wrap;
 }
+.cards {
+  /*flex: 0 2 auto;*/
+  display: flex;
+  flex-wrap: wrap;
+}
+
 .header {
   height: 72px;
   background: darkmagenta;
@@ -30,4 +37,5 @@ body {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+  width: 300px;
 }
