--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -9,6 +9,7 @@ body {
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
+  flex: 1 0;
 }
 .cards {
   /*flex: 0 2 auto;*/
@@ -29,6 +30,7 @@ body {
   height: 72px;
   background: #eee;
   color: darkmagenta;
+  text-align: center;
 }
 
 .sidebar {
