--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -30,9 +30,14 @@ body {
   height: 72px;
   background: #eee;
   color: darkmagenta;
-  text-align: center;
+  justify-content: center;
+
 }
 
+.footer, .header {
+  display: flex;
+  align-items: center;
+}
 .sidebar {
   width: 300px;
   background: royalblue;
