--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -41,6 +41,8 @@ body {
 .sidebar {
   width: 300px;
   background: royalblue;
+  flex: 0 0 auto;
+  padding: 16px;
 }
 
 .card {
@@ -48,4 +50,9 @@ body {
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
   width: 300px;
+}
+a {
+  text-decoration: none;
+  color: white;
+  font-size: 24px;
 }
