--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -52,6 +52,12 @@ body {
   border-radius: 4px;
   width: 300px;
 }
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
 a {
   text-decoration: none;
   color: white;
