feat: add grid-template-columns

--- a/grid/01-grid-layout-1/style.css
+++ b/grid/01-grid-layout-1/style.css
@@ -13,6 +13,7 @@ body, html {
                         "sidebar nav"
                         "sidebar article"
                         "footer footer";
+  grid-template-columns: 1fr 3fr;
 }
 
 .container div {
