--- a/grid/02-grid-layout-2/style.css
+++ b/grid/02-grid-layout-2/style.css
@@ -9,11 +9,12 @@ body, html {
   padding: 16px;
   box-sizing: border-box;
   display: grid;
-  grid-template: 1fr 1fr 5fr 1fr/ 1fr 2fr;
+  grid-template: 1fr 1fr 5fr 1fr/ 1fr 3fr;
   grid-template-areas:  "header header"
                          "sidebar nav"
                          "sidebar article"
                          "footer footer";
+  gap: 15px;
 
 }
 
