--- a/grid/03-grid-layout-3/style.css
+++ b/grid/03-grid-layout-3/style.css
@@ -5,6 +5,9 @@
 
 .container {
   text-align: center;
+  display: grid;
+  grid-template-columns: 1fr 4fr;
+  gap: 4px;
 }
 
 .container div {
@@ -17,6 +20,10 @@
 
 .header {
   background-color: #393f4d;
+  display: grid;
+  grid-column: span 2;
+  grid-template-columns: 1fr 4fr;
+   align-items: center;
 }
 
 .logo {
@@ -26,6 +33,10 @@
 }
 
 .menu ul {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  justify-items: end;
+  list-style: none;
 }
 
 .menu ul,
@@ -35,6 +46,10 @@
 
 .sidebar {
   background-color: #FF7755;
+  grid-row-start: 2;
+  grid-row-end: 4;
+  display: grid;
+  gap: 50px;
 }
 
 .sidebar .photo {
@@ -46,6 +61,8 @@
 }
 
 .photo  {
+  display: grid;
+  align-items: center;
 }
 
 .sidebar .side-content {
@@ -53,13 +70,23 @@
   color: black;
   font-size: 16px;
   font-weight: normal;
+  display: grid;
+  align-items: center;
+  
 }
 
 .nav {
   background-color: #FF7755;
+  grid-column: 2;
+
 }
 
 .nav ul {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  justify-items: center;
+  align-items: center;
+  list-style: none;
 }
 
 .nav ul li {
@@ -69,6 +96,10 @@
 
 .article {
   background-color: #bccbde;
+  grid-column: 2;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 15px;
 }
 
 .article p {
@@ -82,6 +113,7 @@
   background-color: #FFFFFF;
   color: black;
   text-align: center;
+  height: 250px;
 }
 
 .card p {
@@ -97,6 +129,7 @@
 
 .footer {
   background-color: #393f4d;
+  grid-column: span 2;
 }
 
 .footer p {
