--- a/animation/01-button-hover/style.css
+++ b/animation/01-button-hover/style.css
@@ -16,4 +16,21 @@ button {
   font-size: 18px;
   padding: 16px 24px;
   text-align: center;
+  transition-property: font-size;
+  transition-duration: 1s;
 }
+
+button:hover {
+  font-size: 26px;
+  
+}
+
+/* alternative */
+
+/* button {
+  transition: transform .3s ease-in-out;
+}
+
+button:hover {
+  transform: scale(1.2)
+} */
