--- a/animation/02-pop-up/style.css
+++ b/animation/02-pop-up/style.css
@@ -35,10 +35,13 @@ button {
   top: 50%;
   left: 50%;
   transform-origin: center;
-  transform: translate(-50%, -50%);
+  /* transform: translate(-50%, -50%); */
   pointer-events: none;
   opacity: 0%;
   text-align: center;
+
+  transform: translate(-50%, -100%);
+  transition: transform .3s ease-in-out, opacity .4s ease;
 }
 .popup-modal p {
   margin-bottom: 24px
@@ -54,10 +57,10 @@ button {
 
 .popup-modal.show {
   opacity: 100%;
+  transform: translate(-50%, -50%);
   pointer-events: all;
 }
 
 .backdrop.show {
   opacity: 30%;
 }
-
